# libbase

./: .gitignore  CMakeLists.txt
docs/: clopts.md
include/: clopts.hh
include/base/: Assert.hh  Base.hh  Chrono.hh  Clopts.hh  Colours.hh  Compression.hh  DSA.hh  Defer.hh  FS.hh  FixedVector.hh  Formatters.hh  IO.hh  Macros.hh  Numeric.hh  Process.hh  Properties.hh  Ref.hh  Regex.hh  Result.hh  SQL.hh  Serialisation.hh  Size.hh  Span.hh  Str.hh  Stream.hh  StringUtils.hh  System.hh  Text.hh  Threading.hh  Trie.hh  TrieMap.hh  Types.hh  Utils.hh
include/base/detail/: FSCommon.hh  FSGeneric.hh  FSLinux.hh  SystemInfo.hh
lib/: Base.ccm  Cmd.ccm  DSA.ccm  Formatters.ccm  Macros.ccm  Numeric.ccm  Result.ccm  STD.ccm  Stream.ccm  Trie.ccm  Types.ccm  Utils.ccm  Variant.ccm
lib/fs/: FS.ccm  FSGeneric.inc  FSLinux.inc  Generic.inc
lib/text/: Colours.ccm  Text.ccm
src/: Assert.cc  Compression.cc  FS.cc  FSGeneric.inc  Numeric.cc  Process.cc  ProcessUnix.inc  Regex.cc  SQL.cc  Serialisation.cc  System.cc  Text.cc  Utils.cc
src/fs/: FS.cc  FSGeneric.inc  FSLinux.inc  Generic.inc
src/text/: Colours.cc  Text.cc
test/: Clopts.cc  Colours.cc  Compression.cc  Deserialiser.cc  FS.cc  FixedVector.cc  Formatters.cc  Map.cc  MapAndSet.cc  Numeric.cc  Process.cc  Ref.cc  Regex.cc  Result.cc  SQL.cc  Serialiser.cc  Size.cc  Span.cc  StableVector.cc  Str.cc  Stream.cc  Tempset.cc  TestCommon.hh  TestSerialisation.hh  Text.cc  Threading.cc  Trie.cc  TrieMap.cc  Utils.cc  Variant.cc
test-compile/: Clopts.cc
verify-tests/: Clopts.cc
